--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
     "type-check": "tsc --noEmit",
     "deploy": "npm run build && gh-pages -d dist",
     "predeploy": "npm run build"
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^2.0.1",
+    "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
+    "framer-motion": "^10.16.16",
+    "fuse.js": "^7.0.0",
+    "lucide-react": "^0.294.0",
+    "openai": "^4.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4",
-    "redux-persist": "^6.0.0",
-    "framer-motion": "^10.16.16",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0",
     "react-hook-form": "^7.48.2",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.2",
-    "recharts": "^2.8.0",
-    "date-fns": "^3.0.6",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.20.1",
     "react-syntax-highlighter": "^15.5.0",
-    "openai": "^4.20.1",
-    "fuse.js": "^7.0.0",
-    "react-hot-toast": "^2.4.1"
+    "recharts": "^2.8.0",
+    "redux-persist": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -47,12 +49,12 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "gh-pages": "^6.1.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-pwa": "^0.17.4"
   },
-  "homepage": "https://yourusername.github.io/funds-budget-allocation"
+  "homepage": "https://markerstatus.github.io/funds-budget-allocation"
 }
